# xhec-mlops-2025-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile.app  Dockerfile.streamlit  INTEGRATION_GUIDE.md  MLFLOW_INTEGRATION.md  PR_4.md  README.md  README_STEP4.md  STREAMLIT_README.md  demo_streamlit.py  deploy.sh  deploy_prefect.py  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.txt  run_streamlit.sh  run_tests.py  simple_train.py  streamlit_app.py  test_integration.py  test_streamlit.py
.github/workflows/: ci.yaml
archive/: README.md
archive/docs/: API_GUIDELINES.md  STEP4_API_DOCKER.md
archive/streamlit/: run_streamlit.sh  streamlit_app.py
archive/testing/: pytest.ini  run_tests.py
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: __init__.py  app_config.py  inference.py  main.py  mlflow_utils.py  preprocessing.py  schemas.py
tests/: test_api.py
