[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Felix Mller", email = "felixmueller0205@gmail.com" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "pre-commit>=3.0.0",
  "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]
