[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Felix Müller", email = "felixmueller0205@gmail.com" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.0.0",
  "pre-commit>=3.0.0",
  "ruff>=0.1.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scikit-learn>=1.3.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.25.0",
  "mlflow>=2.8.0",
  "pyarrow>=21.0.0",
  "loguru>=0.7.3",
  "prefect>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
exclude = ["data*", "assets*", "notebooks*"]

[tool.ruff]
exclude = [".venv", ".github"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
